--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,10 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.mockito:mockito-inline:2.13.0+'
 }
